--- a/inestables.html
+++ b/inestables.html
@@ -14,7 +14,7 @@
 <p>la agricultaria es una de estas ya que no siempre tiene un presio estable y contante en si.</p>
 <p>la ganaderia es otra por que tampoco tienen un presio estable ya que puede variar el presio  del animal</p>
   <h2>Agricultura</h2>
-  <img src="images (6)" width="450" height="250" alt="Agricultura">
+  <img src="images (6).jfif" width="450" height="250" alt="Agricultura">
 
   <h2>Ganadería</h2>
   <img src="vaquilla" width="450" height="200" alt="Ganadería">
